--- a/index.html
+++ b/index.html
@@ -94,8 +94,55 @@
                 </div>
             </div>
             <div id="popular">
-                
+                <div class="popular-text">
+                    <h3 class="title">Popular Destination</h3>
+                    <span class="sub-title">
+                        Suffered alteration in some form, by injected humour or good day randomised booth anim 8-bit
+                        hella wolf moon beard
+                        words.
+                    </span>
+                </div>
+
+                <div class="popular-content">
+                    <div class="popular-item">
+                        <img src="./assets/img/dalat_popular.jpg" alt="">
+                        <br>
+                        <h3>
+                            Da Lat
+                        </h3>
+                    </div>
+                    <div class="popular-item">
+                        <img src="./assets/img/danang_popular.jpg" alt="">
+                        <br>
+                        <h3>Da Nang</h3>
+                    </div>
+                    <div class="popular-item">
+                        <img src="./assets/img/ninhbinh_popular.jpg" alt="">
+                        <br>
+                        <h3>Ninh Binh</h3>
+                    </div>
+                    <div class="popular-item">
+                        <img src="./assets/img/pham-truc-f9AsKQWRmng-unsplash.jpg" alt="">
+                        <br>
+                        <h3>Da Lat</h3>
+                    </div>
+                    <div class="popular-item">
+                        <img src="./assets/img/ammie-ngo-vcu-OZBxxRk-unsplash.jpg" alt="">
+                        <br>
+                        <h3>Da Lat</h3>
+                    </div>
+                    <div class="popular-item">
+                        <img src="./assets/img/dac-duy-uAAXB-ocv4I-unsplash.jpg" alt="">
+                        <br>
+                        <h3>Da Lat</h3>
+                    </div>
+
+                </div>
             </div>
+            <div id="subcribe">
+
+            </div>
+
         </div>
 
         <div id="footer">
