--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Travel With You</title>
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet" href="./assets/css/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nothing You Could Do">
+    <script src="https://kit.fontawesome.com/713e2d4828.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,8 +21,8 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a href="">Home </a></li>
-                        <li><a href="">About </a></li>
+                        <li><a href="index.html">Home </a></li>
+                        <li><a href="./page/about.html">About </a></li>
                         <li><a href="">Destination </a></li>
                         <li><a href="">Pages
                                 <i class="arrow-down ti-angle-down"></i>
@@ -42,6 +45,7 @@
                         <i class="search ti-search"> </i>
                     </a>
                 </div>
+
             </div>
         </div>
         <div id="slider">
@@ -136,10 +140,21 @@
                         <br>
                         <h3>Da Lat</h3>
                     </div>
+                    <div class="search-btn">
+                        <button class="btn">
+                            More Place
+                        </button>
 
+                    </div>
                 </div>
+
             </div>
-            <div id="subcribe">
+            <div id="video">
+                <div class="video-content">
+                    <a href="https://www.youtube.com/watch?v=DIgv-e18OzA">
+                        Enjoy Video <i class="fa-solid fa-play" style="font-size: 80px !important;"></i>
+                    </a>
+                </div>
 
             </div>
 
